Se agregan las catas realizadas a su version final

--- a/Módulo 5 - Usar operaciones matemáticas/Kata5.ipynb
+++ b/Módulo 5 - Usar operaciones matemáticas/Kata5.ipynb
@@ -4,7 +4,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Ejercicio1 - Utilizar operadores aritméticos"
+        "# Kata 5\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ejercicio1 - Utilizar operadores aritméticos"
       ]
     },
     {
@@ -23,16 +30,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Crear variables para almacenar las dos distancias\n",
-        "# ¡Asegúrate de quitar las comas!"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -43,11 +40,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "La distancia entre Tierra y Jupiter, es de: 628949330 km o 390577533.93 millas\n"
+          ]
+        }
+      ],
       "source": [
-        "# Calcular la distancia entre planetas"
+        "nombre_planeta1='Tierra'\n",
+        "nombre_planeta2='Jupiter'\n",
+        "distancia_planeta1=149597870\n",
+        "distancia_planeta2=778547200\n",
+        "distanciaP1P2=abs(distancia_planeta2-distancia_planeta1)\n",
+        "print(f'La distancia entre {nombre_planeta1} y {nombre_planeta2}, es de: {distanciaP1P2} km o {distanciaP1P2*0.621} millas')"
       ]
     },
     {
@@ -89,30 +99,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Almacenar las entradas del usuario\n",
-        "#Pista: variable = input(\"¿Cuál es tu nombre?\")"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### Convertir a número\n",
         "Debido a que `input` devuelve valores de cadena, necesitamos convertirlos en números. Para nuestro ejemplo, usaremos `int`"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Convierte las cadenas de ambos planetas a números enteros"
       ]
     },
     {
@@ -126,14 +117,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "La distancia entre los planetas es de: 1375600000 km o 854247600.0 millas\n"
+          ]
+        }
+      ],
       "source": [
-        "# Realizar el cálculo y determinar el valor absoluto\n",
-        "\n",
-        "\n",
-        "# Convertir de KM a Millas"
+        "distancia_planeta1=int(input(\"Introduce la distancia del son al planeta 1\"))\n",
+        "distancia_planeta2=int(input(\"Introduce la distancia del son al planeta 2\"))\n",
+        "distanciaP1P2=abs(distancia_planeta2-distancia_planeta1)\n",
+        "print(f'La distancia entre los planetas es de: {distanciaP1P2} km o {distanciaP1P2*0.621} millas')"
       ]
     },
     {
@@ -153,92 +152,6 @@
         "| Saturno  | 1433500000        |\n",
         "| Urano  | 2872500000        |\n",
         "| Neptuno | 4495100000        |"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Soluciones"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Ejercicio 1"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Crear variables para almacenar las dos distancias\n",
-        "# ¡Asegúrate de quitar las comas!\n",
-        "\n",
-        "first_planet = 149597870\n",
-        "second_planet = 778547200"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Calcular la distancia entre planetas\n",
-        "\n",
-        "distance_km = second_planet - first_planet\n",
-        "print(distance_km)\n",
-        "\n",
-        "distance_mi = distance_km * 0.621\n",
-        "print(distance_mi)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Ejercicio 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Almacenar las entradas del usuario\n",
-        "first_planet = input('Introduzca la distancia del sol para el primer planeta en KM')\n",
-        "second_planet = input('Introduzca la distancia desde el sol para el segundo planeta en KM')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Convierte las cadenas de ambos planetas a números enteros\n",
-        "first_planet = int(first_planet)\n",
-        "second_planet = int(second_planet)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Realizar el cálculo y determinar el valor absoluto\n",
-        "distance_km = second_planet - first_planet\n",
-        "print(distance_km)\n",
-        "\n",
-        "# Convertir de KM a Millas\n",
-        "distance_mi = distance_km * 0.621\n",
-        "print(abs(distance_mi))"
       ]
     },
     {
@@ -280,7 +193,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
