--- a/Módulo 6 - Introducción a las listas/Kata6.ipynb
+++ b/Módulo 6 - Introducción a las listas/Kata6.ipynb
@@ -4,7 +4,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Ejercicio1: Crear y usar listas de Python\n"
+        "# Kata 6"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ejercicio1: Crear y usar listas de Python\n"
       ]
     },
     {
@@ -26,15 +33,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Creamos la lista planets y la mostramos"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -43,11 +41,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hay 9  planetas\n",
+            "El ultimo es: Pluton\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agregamos a plutón y mostramos el último elemento"
+        "# Agregamos a plutón y mostramos el último elemento\n",
+        "planets=['Mercurio','Venus','Tierra','Marte','Jupiter','Saturno','Urano','Neptuno']\n",
+        "planets.append('Pluton')\n",
+        "print('Hay',len(planets),' planetas')\n",
+        "print('El ultimo es:',planets[-1])"
       ]
     },
     {
@@ -77,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -95,29 +106,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Solicitamos el nombre de un planeta *Pista:  input()*"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### Encuentra el planeta en la lista\n",
         "Para determinar qué planetas están más cerca que el que ingresó el usuario, debes encontrar dónde está el planeta en la lista. Puedes utilizar `index` para realizar esta operación. Agrega el código para encontrar el índice del planeta."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Busca el planeta en la lista"
       ]
     },
     {
@@ -127,15 +120,6 @@
         "### Mostrar planetas más cercanos al sol que el que el usuario ingresó\n",
         "\n",
         "Con el índice determinado, ahora puedes agregar el código para mostrar los planetas más cercanos al sol."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Muestra los planetas más cercanos al sol"
       ]
     },
     {
@@ -149,114 +133,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Estos son los planetas mas cerca que Mars del sol\n",
+            "['Mercury', 'Venus', 'Earth']\n",
+            "Estos son los planetas mas lejos que Mars del sol\n",
+            "['Jupiter', 'Saturn', 'Neptune']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más lejanos al sol"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Soluciones"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Ejercicio 1"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Creamos la lista planets y la mostramos\n",
-        "\n",
-        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
-        "\n",
-        "print('There are', len(planets), 'planets')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Agregamos a plutón y mostramos el último elemento\n",
-        "\n",
-        "planets.append('Pluto')\n",
-        "\n",
-        "print(planets[-1], 'is the last planet')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Ejercicio 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Lista de planetas\n",
-        "\n",
-        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Solicitamos el nombre de un planeta *Pista:  input()*\n",
-        "user_planet = input('Please enter the name of the planet (with a capital letter to start)')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Busca el planeta en la lista\n",
-        "\n",
-        "planet_index = planets.index(user_planet)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Muestra los planetas más cercanos al sol\n",
-        "\n",
-        "print('Here are the planets closer than ' + user_planet)\n",
-        "print(planets[0:planet_index])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Muestra los planetas más lejanos al sol\n",
-        "\n",
-        "print('Here are the planets further than ' + user_planet)\n",
-        "print(planets[planet_index + 1:])"
+        "nuevo_planeta=input('Introduce el nombre del planeta empezando con mayuscula')\n",
+        "planets_indx=planets.index(nuevo_planeta)\n",
+        "print(f'Estos son los planetas mas cerca que {planets[planets_indx]} del sol')\n",
+        "print(planets[0:planets_indx])\n",
+        "print(f'Estos son los planetas mas lejos que {planets[planets_indx]} del sol')\n",
+        "print(planets[planets_indx+1:])"
       ]
     },
     {
@@ -292,7 +189,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
