--- a/Módulo 1 - Primeros pasos/Kata1.ipynb
+++ b/Módulo 1 - Primeros pasos/Kata1.ipynb
@@ -4,6 +4,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Kata 1"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Oficial superior> \"¿Cadete?\"\n",
         "\n",
         "Usted > \"¿Sí, señora?\"\n",
@@ -21,13 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Today's date is: 2022-02-13\n"
+          ]
+        }
+      ],
       "source": [
         "from datetime import date\n",
-        "\n",
-        "print(\"Today's date is: \")"
+        "print(\"Today's date is: \"+str(date.today()))"
       ]
     },
     {
@@ -46,15 +60,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1.0 parsec, is 3.26156 lightyears\n"
+          ]
+        }
+      ],
       "source": [
-        "parsec = 11\n",
-        "\n",
-        "lightyears = 0\n",
-        "\n",
-        "print(str(parsec) + \" parsec, is \" + str(lightyears) + \" lightyears\")"
+        "parsec=float(input(\"Enter numbers of parsec:\"))\n",
+        "lightyears=parsec*3.26156\n",
+        "print (str(parsec)+\" parsec, is \"+str(lightyears)+\" lightyears\")"
       ]
     },
     {
@@ -63,38 +83,6 @@
       "source": [
         "> [!TIP]\n",
         "> 1 parsec es 3.26156 años luz. Utiliza el operador de multiplicación."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Soluciones\n",
-        "\n",
-        "Aquí está la solución para el primer programa:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from datetime import date\n",
-        "\n",
-        "print(\"Today's date is: \" + str(date.today()))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "parsec = 11\n",
-        "lightyears = 3.26156 * parsec\n",
-        "\n",
-        "print(str(parsec) + \" parsec, is \" + str(lightyears) + \" lightyears\")"
       ]
     },
     {
@@ -113,13 +101,16 @@
     }
   ],
   "metadata": {
+    "interpreter": {
+      "hash": "43901039963fc4d665b1386ca226915cc8dd1bedebdc45b768cc581442ff6387"
+    },
     "kernel_info": {
       "name": "conda-env-py37_default-py"
     },
     "kernelspec": {
       "display_name": "py37_default",
       "language": "python",
-      "name": "conda-env-py37_default-py"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -131,7 +122,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.9"
+      "version": "3.9.10"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
