--- a/Módulo 3 - Usar lógica booleana/Kata3.ipynb
+++ b/Módulo 3 - Usar lógica booleana/Kata3.ipynb
@@ -4,6 +4,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Kata 3"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Ejercicio - Escribir declaraciones `if`, `else`, y `elif`\n",
         "\n",
         "Las instrucciones `If` te permiten ejecutar condicionalmente código Python. Se usan comúnmente en Python para \"tomar decisiones\" sobre lo que debería suceder a continuación mientras se ejecuta un programa.\n",
@@ -41,13 +48,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¡Peligro! Asteroide a 49 km/s\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "velocidad_asteroide=49\n",
+        "if velocidad_asteroide>25:\n",
+        "    print(\"¡Peligro! Asteroide a \"+str(velocidad_asteroide)+\" km/s\")\n",
+        "else:\n",
+        "    print(\"Asteroide a \"+str(velocidad_asteroide)+\" km/s, todo bien c:\")\n",
+        " "
       ]
     },
     {
@@ -59,13 +80,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No se puede ver nada :c\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
-        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False"
+        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
+        "velocidad_asteroide=19\n",
+        "if velocidad_asteroide>20:\n",
+        "    print(\"Rayo visible desde la tierra\")\n",
+        "elif velocidad_asteroide>=20:\n",
+        "    print(\"Rayo visible desde la tierra\")\n",
+        "else:\n",
+        "    print(\"No se puede ver nada :c\")"
       ]
     },
     {
@@ -99,99 +135,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
-        "# Para probar el código, prueba con varias velocidades y tamaños\n",
-        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Soluciones"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Problema No. 1"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
-        "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
-        "\n",
-        "asteroide = 49\n",
-        "if asteroide > 25:\n",
-        "    print('¡Alerta! ¡Un asteroide se acerca a velocidades peligrosas!')\n",
-        "else:\n",
-        "    print('¡Sigue con tu día!')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Problema No. 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
-        "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
-        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
-        "\n",
-        "asteroide = 19\n",
-        "if asteroide > 20:\n",
-        "    print('Look up! ¡Hay una luz mágica en el cielo!')\n",
-        "elif asteroide == 20:\n",
-        "    print('Look up! ¡Hay una luz mágica en el cielo!')\n",
-        "else:\n",
-        "    print('¡Nada que ver aquí!')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Problema No. 3"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Rayo visible desde la tierra\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
         "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
-        "\n",
-        "velocidad_asteroide = 25\n",
-        "tamano_asteroide = 40\n",
-        "if velocidad_asteroide > 25 and tamano_asteroide > 25:\n",
-        "    print('¡Alerta, Un asteroide muy peligroso viene hacia la Tierra!')\n",
-        "elif velocidad_asteroide >= 20:\n",
-        "    print('Look up! ¡Hay una luz mágica en el cielo!')\n",
-        "elif tamano_asteroide < 25:\n",
-        "    print('Nada que ver aquí :)')\n",
+        "velocidad_asteroide=25\n",
+        "diamension_asteroide=20\n",
+        "if velocidad_asteroide>25 or diamension_asteroide>25:\n",
+        "    print(\"¡Peligro!  Asteroide peligroso\")\n",
+        "elif velocidad_asteroide>=20:\n",
+        "    print(\"Rayo visible desde la tierra\")\n",
+        "elif diamension_asteroide<25:\n",
+        "    print(\"Nada que ver aqui :c\")\n",
         "else:\n",
-        "    print('Nada que ver aquí :)')"
+        "    print(\"Nada que ver aqui :c\")"
       ]
     },
     {
@@ -231,7 +199,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
