--- a/Módulo 4 - Cadenas/Kata4.ipynb
+++ b/Módulo 4 - Cadenas/Kata4.ipynb
@@ -4,7 +4,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Ejercicio 1: Transformar cadenas\n",
+        "# Kata 4"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ejercicio 1: Transformar cadenas\n",
         "Hay varias operaciones que puedes realizar en las cadenas cuando las manipulamos. En este ejercicio, usarás métodos de cadena para modificar el texto con hechos sobre la Luna y luego extraerás información para crear un breve resumen.\n",
         "\n",
         "> **Nota**\n",
@@ -20,12 +27,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
-        "text = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. \n",
-        "On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\""
+        "text=\"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. On average, the Moon moves 4cm away from the Earth every year. \n",
+        "This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\""
       ]
     },
     {
@@ -36,15 +43,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Añade el código necesario"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -52,28 +50,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Define las palabras pista: average, temperature y distance suenan bien"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "Cre un bucle para imprimir solo datos sobre la Luna que estén relacionados con las palabras clave definidas anteriormente:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Ciclo for para recorrer la cadena"
       ]
     },
     {
@@ -85,11 +65,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gravedad Sobre Moon \n",
+            " -------------------------------------------------- \n",
+            " Nombre del planeta:Earth \n",
+            " Gravedad en Moon:1.6199999999999999m/s2\n",
+            "-------------------------------------------------- \n",
+            " Nombre del planeta:Earth \n",
+            " Gravedad en Moon:1.6199999999999999m/s2\n",
+            "Gravedad sobre: Ganímedes\n",
+            "---------------------------------------------------\n",
+            "Nombre del planeta: Marte\n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo para cambiar C a Celsius"
+        "name = \"Moon\"\n",
+        "gravity = 0.00162 # in kms\n",
+        "planet = \"Earth\"\n",
+        "title=f\"gravedad sobre {name}\"\n",
+        "echos=f\"\"\"{'-'*50} \\n Nombre del planeta:{planet} \\n Gravedad en {name}:{gravity*1000}m/s2\"\"\"\n",
+        "text=f\"\"\"{title.title()} \\n {echos}\"\"\"\n",
+        "print(text)\n",
+        "name = \"Ganímedes\"\n",
+        "gravity = 0.00143 # in kms\n",
+        "planet = \"Marte\"\n",
+        "print(echos)\n",
+        "template=\"\"\"Gravedad sobre: {name}\n",
+        "---------------------------------------------------\n",
+        "Nombre del planeta: {planet}\n",
+        "Gravedad en {name}: {gravity} m/s2\"\"\"\n",
+        "print(template.format(name=name,planet=planet,gravity=gravity*1000))"
       ]
     },
     {
@@ -121,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -139,28 +152,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Creamos el título"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "Ahora crea una plantilla de cadena multilínea para contener el resto de la información. En lugar de usar kilómetros, debes convertir la distancia a metros multiplicando por 1,000."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Creamos la plantilla"
       ]
     },
     {
@@ -172,11 +167,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gravedad Sobre Moon \n",
+            " -------------------------------------------------- \n",
+            " Nombre del planeta:Earth \n",
+            " Gravedad en Moon:1.6199999999999999m/s2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Unión de ambas cadenas"
+        "title=f\"gravedad sobre {name}\"\n",
+        "echos=f\"\"\"{'-'*50} \\n Nombre del planeta:{planet} \\n Gravedad en {name}:{gravity*1000}m/s2\"\"\"\n",
+        "text=f\"\"\"{title.title()} \\n {echos}\"\"\"\n",
+        "print(text)"
       ]
     },
     {
@@ -194,29 +203,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Comprueba la plantilla\n",
-        "# print(nombre_plantilla)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "La salida no muestra información sobre Marte. Todavía muestra información sobre la Luna. Esto sucede porque las cadenas f están ansiosas en su evaluación, por lo que las variables una vez asignadas no se pueden reasignar. Para evitar este problema, vuelva a hacer la plantilla para utilizar .format():"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Nueva plantilla"
       ]
     },
     {
@@ -228,177 +218,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------- \n",
+            " Nombre del planeta:Earth \n",
+            " Gravedad en Moon:1.6199999999999999m/s2\n",
+            "Gravedad sobre: Ganímedes\n",
+            "---------------------------------------------------\n",
+            "Nombre del planeta: Marte\n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Pista: print(nueva_plantilla.format(variables))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Soluciones"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Ejercicio 1"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Divide el texto\n",
-        "text_parts = text.split('. ')\n",
-        "text_parts"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Palabras clave\n",
-        "key_words = [\"average\", \"temperature\", \"distance\"]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Ciclo for para recorrer la cadena\n",
-        "for sentence in text_parts:\n",
-        "    for key_word in key_words:\n",
-        "        if key_word in sentence:\n",
-        "            print(sentence)\n",
-        "            break"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Ciclo para cambiar C a Celsius\n",
-        "for sentence in text_parts:\n",
-        "    for key_word in key_words:\n",
-        "        if key_word in sentence:\n",
-        "            print(sentence.replace(' C', ' Celsius'))\n",
-        "            break"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Ejercicio 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Datos con los que vamos a trabajar\n",
-        "\n",
-        "planeta = 'Marte '\n",
-        "gravedad  = 0.00143\n",
-        "nombre = 'Ganímedes'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Creamos el título\n",
-        "title = f'datos de gravedad sobre {nombre}'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Creamos la plantilla\n",
-        "hechos = f\"\"\"{'-'*80} \n",
-        "Nombre del planeta: {planeta} \n",
-        "Gravedad en {nombre}: {gravedad * 1000} m/s2 \n",
-        "\"\"\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Unión de ambas cadenas\n",
-        "template = f\"\"\"{title.title()} \n",
-        "{hechos} \n",
-        "\"\"\" \n",
-        "print(hechos)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Nuevos datos muestra\n",
-        "planeta = 'Marte '\n",
-        "gravedad  = 0.00143\n",
-        "nombre = 'Ganímedes'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Comprobamos la plantilla\n",
-        "print(hechos)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "new_template = \"\"\"\n",
-        "Datos de Gravedad sobre: {nombre}\n",
-        "-------------------------------------------------------------------------------\n",
-        "Nombre del planeta: {planeta}\n",
-        "Gravedad en {nombre}: {gravedad} m/s2\n",
-        "\"\"\"\n",
-        "print(new_template.format(nombre=nombre, planeta=planeta, gravedad=gravedad))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Pista: print(nueva_plantilla.format(variables))\n",
-        "print(new_template.format(nombre=nombre, planeta=planeta, gravedad=gravedad*1000))"
+        "name = \"Ganímedes\"\n",
+        "gravity = 0.00143 # in kms\n",
+        "planet = \"Marte\"\n",
+        "print(echos)\n",
+        "template=\"\"\"Gravedad sobre: {name}\n",
+        "---------------------------------------------------\n",
+        "Nombre del planeta: {planet}\n",
+        "Gravedad en {name}: {gravity} m/s2\"\"\"\n",
+        "print(template.format(name=name,planet=planet,gravity=gravity*1000))\n"
       ]
     },
     {
@@ -438,7 +284,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
