--- a/Módulo 7 - Estructuras de control/Kata7.ipynb
+++ b/Módulo 7 - Estructuras de control/Kata7.ipynb
@@ -4,7 +4,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Ejercicio 1: Creación de un bucle \"while\""
+        "# Kata 7"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ejercicio 1: Creación de un bucle \"while\""
       ]
     },
     {
@@ -24,15 +31,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Declara dos variables"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -47,11 +45,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Escribe el ciclo while solicitado"
+        "new_planet=''\n",
+        "planets=[]\n",
+        "while new_planet.lower()!='done':\n",
+        "    if new_planet:\n",
+        "        planets.append(new_planet)\n",
+        "    new_planet=input(\"Name of the planet\")"
       ]
     },
     {
@@ -85,68 +88,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mercury\n",
+            "Mars\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu ciclo for para iterar en una lista de planetas"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Soluciones"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Ejercicio 1"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Declaramos 2 variables\n",
-        "\n",
-        "new_planet = ''\n",
-        "planets = []"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Escribe el ciclo while solicitado\n",
-        "\n",
-        "while new_planet.lower() != 'done':\n",
-        "    if new_planet:\n",
-        "        planets.append(new_planet)\n",
-        "    new_planet = input('Enter a new planet ')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Ejercicio 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Escribe tu ciclo for para iterar en una lista de planetas\n",
-        "\n",
         "for planet in planets:\n",
         "    print(planet)"
       ]
@@ -187,7 +141,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
