--- a/Módulo 8 - Administrar datos con diccionarios/Kata8.ipynb
+++ b/Módulo 8 - Administrar datos con diccionarios/Kata8.ipynb
@@ -4,7 +4,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Ejercicio 1: Creación de diccionarios de Python"
+        "# Kata 8"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ejercicio 1: Creación de diccionarios de Python"
       ]
     },
     {
@@ -39,28 +46,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Crea un diccionario llamado planet con los datos propuestos"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "Para recuperar valores, puede utilizar el método  `get` o corchetes (`[ ]`) con el nombre de la clave que desea recuperar."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Muestra el nombre del planeta y el número de lunas que tiene."
       ]
     },
     {
@@ -84,11 +73,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Planet name: Mars and has 2 moons\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agrega la clave circunferencia con los datos proporcionados previamente"
+        "planet={\n",
+        "    'name':'Mars',\n",
+        "    'moons':2\n",
+        "}\n",
+        "print(f\"Planet name: {planet.get('name')} and has {planet.get('moons')} moons\")"
       ]
     },
     {
@@ -100,11 +101,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Planet name: Mars with a polar circumference of 6752 km\n"
+          ]
+        }
+      ],
       "source": [
-        "# Imprime el nombre del planeta con su circunferencia polar."
+        "planet['circumference']={\n",
+        "    'polar':6752,\n",
+        "    'equatorial':6792\n",
+        "}\n",
+        "print(f\"Planet name: {planet.get('name')} with a polar circumference of {planet['circumference']['polar']} km\")"
       ]
     },
     {
@@ -131,12 +144,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Planets and moons\n",
-        "\n",
+        "moons=0\n",
         "planet_moons = {\n",
         "    'mercury': 0,\n",
         "    'venus': 0,\n",
@@ -163,15 +176,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Añade el código para determinar el número de lunas."
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -180,119 +184,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The average for moons per planets is: 17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agrega el código para contar el número de lunas. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Soluciones"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Ejercicio 1:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Crea un diccionario llamado planet con los datos propuestos\n",
-        "\n",
-        "planet = {\n",
-        "    'name': 'Mars',\n",
-        "    'moons': 2\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
-        "\n",
-        "print(f'{planet[\"name\"]} has {planet[\"moons\"]} moons')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Agrega la clave circunferencia con los datos proporcionados previamente\n",
-        "\n",
-        "planet['circumference (km)'] = {\n",
-        "    'polar': 6752,\n",
-        "    'equatorial': 6792\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Imprime el nombre del planeta con su circunferencia polar.\n",
-        "\n",
-        "print(f'{planet[\"name\"]} has a polar circumference of {planet[\"circumference (km)\"][\"polar\"]}')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Ejercicio 2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Añade el código para determinar el número de lunas.\n",
-        "\n",
-        "# Obtenemos la lista de las lunas\n",
-        "# Almacenamos los resultados en una variable moons\n",
-        "moons = planet_moons.values()\n",
-        "\n",
-        "# Obtenemos el total de planetas\n",
-        "# Almacenamos los resultados en una variable llamada years\n",
-        "planets = len(planet_moons.keys())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Calcula el total_moons agregando todas las lunas\n",
-        "# Almacena su valor en una variable llamada total_moons\n",
-        "\n",
-        "total_moons = 0\n",
-        "for moon in moons:\n",
-        "    total_moons = total_moons + moon\n",
-        "\n",
-        "# Calcula el promedio dividiendo el total_moons por el número de planetas\n",
-        "average = total_moons / planets\n",
-        "\n",
-        "# Muestra el promedio\n",
-        "print(average)"
+        "planets=planet_moons.__len__()\n",
+        "for moon in planet_moons.values():\n",
+        "    moons=moons+moon\n",
+        "print(f'The average for moons per planets is: {moons/planets}')"
       ]
     },
     {
@@ -330,7 +237,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
