--- a/Módulo 2 - Crear y administrar proyectos/Kata2.ipynb
+++ b/Módulo 2 - Crear y administrar proyectos/Kata2.ipynb
@@ -52,15 +52,15 @@
     "\n",
     "    # Linux, WSL or macOS\n",
     "    source env/bin/activate\n",
-    "    ```"
+    "    ```\n",
+    "    Ahora ves en tu terminal ``(env)``. Eso significa que has activado tu entorno virtual y se ha aislado del resto de tu máquina."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora ves en tu terminal ``(env)``. Eso significa que has activado tu entorno virtual y se ha aislado del resto de tu máquina.\n",
-    "![image](https://github.com/EddieHernGT/Katas-EddieHernGT/blob/a593f0f61e038967419bf9fe3e268044ef8597e3/images/1.jpg)"
+    "![image](../images/1.jpg)"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](https://github.com/EddieHernGT/Katas-EddieHernGT/blob/a593f0f61e038967419bf9fe3e268044ef8597e3/images/6.jpg)"
+    "![image](../images/6.jpg)"
    ]
   },
   {
