Se agrego imagen faltante de kata 2

--- a/Módulo 2 - Crear y administrar proyectos/Kata2.ipynb
+++ b/Módulo 2 - Crear y administrar proyectos/Kata2.ipynb
@@ -97,7 +97,20 @@
     "\n",
     "    ```\n",
     "    Successfully installed python-dateutil-2.8.2 six-1.16.0\n",
-    "    ```\n",
+    "    ```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](../images/4.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Vuelve a ejecutar ```pip freeze``` para ver cómo ha cambiado tu lista de bibliotecas:\n",
     "    ```\n",
     "    pip freeze\n",
