Se cambio el idioma de los codigos de las primeras 6 katas

--- a/Módulo 0 - Preparación del entorno de trabajo/Kata0.ipynb
+++ b/Módulo 0 - Preparación del entorno de trabajo/Kata0.ipynb
@@ -107,18 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adbb0ca268e442c09c621d822ad271ca",
+       "model_id": "f1f6205dc6684f9d9b783e582abe31d7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButton(value=False, button_style='success', description='Iniciar Launch', icon='rocket', tooltip='Engage…"
+       "ToggleButton(value=False, button_style='success', description='Start Launch', icon='rocket', tooltip='Engage y…"
       ]
      },
      "metadata": {},
@@ -127,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fde24bec70eb46778031111840b92082",
+       "model_id": "5d668591ba284ff28ec3a9dfd1907707",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +144,7 @@
     "\n",
     "ignition = widgets.ToggleButton(\n",
     "    value=False,\n",
-    "    description='Iniciar Launch',\n",
+    "    description='Start Launch',\n",
     "    button_style='success',\n",
     "    tooltip='Engage your Launch',\n",
     "    icon='rocket'\n",
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tiempo para alcanzar la velocidad deseada =  1142.8571428571427\n"
+      "Time to reach final velocity =  1142.8571428571427\n"
      ]
     }
    ],
@@ -285,7 +285,7 @@
     "acceleration = 9.8\n",
     "\n",
     "time = (endVelocity - startVelocity) / acceleration\n",
-    "print(\"Tiempo para alcanzar la velocidad deseada = \", time)"
+    "print(\"Time to reach final velocity = \", time)"
    ]
   },
   {
