--- a/Módulo 3 - Usar lógica booleana/Kata3.ipynb
+++ b/Módulo 3 - Usar lógica booleana/Kata3.ipynb
@@ -55,7 +55,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "¡Peligro! Asteroide a 49 km/s\n"
+            "Danger! asteroid traveling at 49 km/s\n"
           ]
         }
       ],
@@ -63,11 +63,11 @@
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
         "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
-        "velocidad_asteroide=49\n",
-        "if velocidad_asteroide>25:\n",
-        "    print(\"¡Peligro! Asteroide a \"+str(velocidad_asteroide)+\" km/s\")\n",
+        "asteroid_speed=49\n",
+        "if asteroid_speed>25:\n",
+        "    print(\"Danger! asteroid traveling at \"+str(asteroid_speed)+\" km/s\")\n",
         "else:\n",
-        "    print(\"Asteroide a \"+str(velocidad_asteroide)+\" km/s, todo bien c:\")\n",
+        "    print(\"Asteroid traveling at \"+str(asteroid_speed)+\" km/s, we're good c:\")\n",
         " "
       ]
     },
@@ -80,14 +80,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "No se puede ver nada :c\n"
+            "You can't see nothing :c\n"
           ]
         }
       ],
@@ -95,13 +95,13 @@
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
         "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
-        "velocidad_asteroide=19\n",
-        "if velocidad_asteroide>20:\n",
-        "    print(\"Rayo visible desde la tierra\")\n",
-        "elif velocidad_asteroide>=20:\n",
-        "    print(\"Rayo visible desde la tierra\")\n",
+        "asteroid_speed=19\n",
+        "if asteroid_speed>20:\n",
+        "    print(\"You can see a light in the sky\")\n",
+        "elif asteroid_speed>=20:\n",
+        "    print(\"You can see a light in the sky\")\n",
         "else:\n",
-        "    print(\"No se puede ver nada :c\")"
+        "    print(\"You can't see nothing :c\")"
       ]
     },
     {
@@ -135,14 +135,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Rayo visible desde la tierra\n"
+            "You can see a light in the sky\n"
           ]
         }
       ],
@@ -150,16 +150,16 @@
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
         "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
-        "velocidad_asteroide=25\n",
-        "diamension_asteroide=20\n",
-        "if velocidad_asteroide>25 or diamension_asteroide>25:\n",
-        "    print(\"¡Peligro!  Asteroide peligroso\")\n",
-        "elif velocidad_asteroide>=20:\n",
-        "    print(\"Rayo visible desde la tierra\")\n",
-        "elif diamension_asteroide<25:\n",
-        "    print(\"Nada que ver aqui :c\")\n",
+        "asteroid_speed=25\n",
+        "asteroid_size=20\n",
+        "if asteroid_speed>25 or asteroid_size>25:\n",
+        "    print(\"Danger! dangerous asteroid approximating\")\n",
+        "elif asteroid_speed>=20:\n",
+        "    print(\"You can see a light in the sky\")\n",
+        "elif asteroid_size<25:\n",
+        "    print(\"You can't see nothing :c\")\n",
         "else:\n",
-        "    print(\"Nada que ver aqui :c\")"
+        "    print(\"You can't see nothing :c\")"
       ]
     },
     {
