--- a/Módulo 4 - Cadenas/Kata4.ipynb
+++ b/Módulo 4 - Cadenas/Kata4.ipynb
@@ -72,17 +72,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gravedad Sobre Moon \n",
+            "Gravity Over Moon \n",
             " -------------------------------------------------- \n",
-            " Nombre del planeta:Earth \n",
-            " Gravedad en Moon:1.6199999999999999m/s2\n",
+            " Name of the planet:Earth \n",
+            " Gravity over Moon:1.6199999999999999m/s2\n",
             "-------------------------------------------------- \n",
-            " Nombre del planeta:Earth \n",
-            " Gravedad en Moon:1.6199999999999999m/s2\n",
-            "Gravedad sobre: Ganímedes\n",
+            " Name of the planet:Earth \n",
+            " Gravity over Moon:1.6199999999999999m/s2\n",
+            "Gravity over: Ganímedes\n",
             "---------------------------------------------------\n",
-            "Nombre del planeta: Marte\n",
-            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n"
+            "Name of the planet: Marte\n",
+            "Gravity over Ganímedes: 1.4300000000000002 m/s2\n"
           ]
         }
       ],
@@ -90,18 +90,18 @@
         "name = \"Moon\"\n",
         "gravity = 0.00162 # in kms\n",
         "planet = \"Earth\"\n",
-        "title=f\"gravedad sobre {name}\"\n",
-        "echos=f\"\"\"{'-'*50} \\n Nombre del planeta:{planet} \\n Gravedad en {name}:{gravity*1000}m/s2\"\"\"\n",
-        "text=f\"\"\"{title.title()} \\n {echos}\"\"\"\n",
+        "title=f\"Gravity over {name}\"\n",
+        "facts=f\"\"\"{'-'*50} \\n Name of the planet:{planet} \\n Gravity over {name}:{gravity*1000}m/s2\"\"\"\n",
+        "text=f\"\"\"{title.title()} \\n {facts}\"\"\"\n",
         "print(text)\n",
         "name = \"Ganímedes\"\n",
         "gravity = 0.00143 # in kms\n",
         "planet = \"Marte\"\n",
-        "print(echos)\n",
-        "template=\"\"\"Gravedad sobre: {name}\n",
+        "print(facts)\n",
+        "template=\"\"\"Gravity over: {name}\n",
         "---------------------------------------------------\n",
-        "Nombre del planeta: {planet}\n",
-        "Gravedad en {name}: {gravity} m/s2\"\"\"\n",
+        "Name of the planet: {planet}\n",
+        "Gravity over {name}: {gravity} m/s2\"\"\"\n",
         "print(template.format(name=name,planet=planet,gravity=gravity*1000))"
       ]
     },
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -167,24 +167,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gravedad Sobre Moon \n",
+            "Gravity Over Moon \n",
             " -------------------------------------------------- \n",
-            " Nombre del planeta:Earth \n",
-            " Gravedad en Moon:1.6199999999999999m/s2\n"
+            " Name of the planet:Earth \n",
+            " Gravity over Moon:1.6199999999999999m/s2\n"
           ]
         }
       ],
       "source": [
-        "title=f\"gravedad sobre {name}\"\n",
-        "echos=f\"\"\"{'-'*50} \\n Nombre del planeta:{planet} \\n Gravedad en {name}:{gravity*1000}m/s2\"\"\"\n",
-        "text=f\"\"\"{title.title()} \\n {echos}\"\"\"\n",
+        "title=f\"Gravity over {name}\"\n",
+        "facts=f\"\"\"{'-'*50} \\n Name of the planet:{planet} \\n Gravity over {name}:{gravity*1000}m/s2\"\"\"\n",
+        "text=f\"\"\"{title.title()} \\n {facts}\"\"\"\n",
         "print(text)"
       ]
     },
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -226,12 +226,12 @@
           "output_type": "stream",
           "text": [
             "-------------------------------------------------- \n",
-            " Nombre del planeta:Earth \n",
-            " Gravedad en Moon:1.6199999999999999m/s2\n",
-            "Gravedad sobre: Ganímedes\n",
+            " Name of the planet:Earth \n",
+            " Gravity over Moon:1.6199999999999999m/s2\n",
+            "Gravity over: Ganímedes\n",
             "---------------------------------------------------\n",
-            "Nombre del planeta: Marte\n",
-            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n"
+            "Name of the planet: Marte\n",
+            "Gravity over Ganímedes: 1.4300000000000002 m/s2\n"
           ]
         }
       ],
@@ -239,11 +239,11 @@
         "name = \"Ganímedes\"\n",
         "gravity = 0.00143 # in kms\n",
         "planet = \"Marte\"\n",
-        "print(echos)\n",
-        "template=\"\"\"Gravedad sobre: {name}\n",
+        "print(facts)\n",
+        "template=\"\"\"Gravity over: {name}\n",
         "---------------------------------------------------\n",
-        "Nombre del planeta: {planet}\n",
-        "Gravedad en {name}: {gravity} m/s2\"\"\"\n",
+        "Name of the planet: {planet}\n",
+        "Gravity over {name}: {gravity} m/s2\"\"\"\n",
         "print(template.format(name=name,planet=planet,gravity=gravity*1000))\n"
       ]
     },
