--- a/Módulo 5 - Usar operaciones matemáticas/Kata5.ipynb
+++ b/Módulo 5 - Usar operaciones matemáticas/Kata5.ipynb
@@ -47,17 +47,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "La distancia entre Tierra y Jupiter, es de: 628949330 km o 390577533.93 millas\n"
+            "The distance between Earth and Jupiter, is: 628949330 km or 390577533.93 miles\n"
           ]
         }
       ],
       "source": [
-        "nombre_planeta1='Tierra'\n",
-        "nombre_planeta2='Jupiter'\n",
-        "distancia_planeta1=149597870\n",
-        "distancia_planeta2=778547200\n",
-        "distanciaP1P2=abs(distancia_planeta2-distancia_planeta1)\n",
-        "print(f'La distancia entre {nombre_planeta1} y {nombre_planeta2}, es de: {distanciaP1P2} km o {distanciaP1P2*0.621} millas')"
+        "firstPlanet='Earth'\n",
+        "secondPlanet='Jupiter'\n",
+        "distance_planet1=149597870\n",
+        "distance_planet2=778547200\n",
+        "distanceP1P2=abs(distance_planet2-distance_planet1)\n",
+        "print(f'The distance between {firstPlanet} and {secondPlanet}, is: {distanceP1P2} km or {distanceP1P2*0.621} miles')"
       ]
     },
     {
@@ -124,15 +124,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "La distancia entre los planetas es de: 1375600000 km o 854247600.0 millas\n"
+            "Distance between the planets : 50300000 km or 31236300.0 miles\n"
           ]
         }
       ],
       "source": [
-        "distancia_planeta1=int(input(\"Introduce la distancia del son al planeta 1\"))\n",
-        "distancia_planeta2=int(input(\"Introduce la distancia del son al planeta 2\"))\n",
-        "distanciaP1P2=abs(distancia_planeta2-distancia_planeta1)\n",
-        "print(f'La distancia entre los planetas es de: {distanciaP1P2} km o {distanciaP1P2*0.621} millas')"
+        "distance_planet1=int(input(\"Distance between planet 1 and sun\"))\n",
+        "distance_planet2=int(input(\"Distance between planet 2 and sun\"))\n",
+        "distanceP1P2=abs(distance_planet2-distance_planet1)\n",
+        "print(f'Distance between the planets : {distanceP1P2} km or {distanceP1P2*0.621} miles')"
       ]
     },
     {
