--- a/Módulo 6 - Introducción a las listas/Kata6.ipynb
+++ b/Módulo 6 - Introducción a las listas/Kata6.ipynb
@@ -41,24 +41,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hay 9  planetas\n",
-            "El ultimo es: Pluton\n"
+            "There are  9  planets\n",
+            "The last one is: Pluto\n"
           ]
         }
       ],
       "source": [
         "# Agregamos a plutón y mostramos el último elemento\n",
-        "planets=['Mercurio','Venus','Tierra','Marte','Jupiter','Saturno','Urano','Neptuno']\n",
-        "planets.append('Pluton')\n",
-        "print('Hay',len(planets),' planetas')\n",
-        "print('El ultimo es:',planets[-1])"
+        "planets=['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn','Uranus', 'Neptune']\n",
+        "planets.append('Pluto')\n",
+        "print('There are ',len(planets),' planets')\n",
+        "print('The last one is:',planets[-1])"
       ]
     },
     {
@@ -133,26 +133,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Estos son los planetas mas cerca que Mars del sol\n",
+            "Those are the nearest planets to the sun: Mars \n",
             "['Mercury', 'Venus', 'Earth']\n",
-            "Estos son los planetas mas lejos que Mars del sol\n",
-            "['Jupiter', 'Saturn', 'Neptune']\n"
+            "Those are the farthest  planets to the sun: Mars \n",
+            "['Jupiter', 'Saturn', 'Uranus', 'Neptune', 'Pluto']\n"
           ]
         }
       ],
       "source": [
-        "nuevo_planeta=input('Introduce el nombre del planeta empezando con mayuscula')\n",
-        "planets_indx=planets.index(nuevo_planeta)\n",
-        "print(f'Estos son los planetas mas cerca que {planets[planets_indx]} del sol')\n",
+        "newPlanet=input('Introduce the name of a planet starting with capital letter')\n",
+        "planets_indx=planets.index(newPlanet)\n",
+        "print(f'Those are the nearest planets to the sun: {planets[planets_indx]} ')\n",
         "print(planets[0:planets_indx])\n",
-        "print(f'Estos son los planetas mas lejos que {planets[planets_indx]} del sol')\n",
+        "print(f'Those are the farthest  planets to the sun: {planets[planets_indx]} ')\n",
         "print(planets[planets_indx+1:])"
       ]
     },
